// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompliantSystems expect to render with unsupported hosts 1`] = `""`;

exports[`CompliantSystems expect to render without error 1`] = `""`;

exports[`Name expect to render without error 1`] = `
<TextContent>
  <Link
    style={
      Object {
        "marginRight": ".5rem",
      }
    }
    to="/reports/ID"
  >
    POLICY_NAME
  </Link>
  <PolicyPopover
    position="right"
    profile={
      Object {
        "id": "ID",
        "name": "NAME",
        "policy": Object {
          "id": "POLICY_ID",
          "name": "POLICY_NAME",
        },
        "policyType": "POLICY_TYPE",
      }
    }
  />
  <GreySmallText>
    POLICY_TYPE
  </GreySmallText>
</TextContent>
`;

exports[`OperatingSystem expect to render with SSG version 1`] = `
<Fragment>
  <Label
    color="cyan"
  >
    RHEL 
    7
  </Label>
  <Text>
    <GreySmallText>
      1.2.3
    </GreySmallText>
  </Text>
</Fragment>
`;

exports[`OperatingSystem expect to render with unsupported warning 1`] = `
<Fragment>
  <Label
    color="cyan"
  >
    RHEL 
    7
  </Label>
  <Text>
    <GreySmallText>
      <UnsupportedSSGVersion>
        1.2.3
      </UnsupportedSSGVersion>
    </GreySmallText>
  </Text>
</Fragment>
`;

exports[`OperatingSystem expect to render without error 1`] = `
<Fragment>
  <Label
    color="cyan"
  >
    RHEL 
    7
  </Label>
</Fragment>
`;
